--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta charset="utf-8">
+    <meta name="Description" CONTENT="АЗС">
+    <meta name="Description" CONTENT="ближайшая заправка">
+    <meta name="Description" CONTENT="дешевые цены на бензин">
+    <meta name="Description" CONTENT="дешевая газовая заправка">
+    <meta name="Description" CONTENT="95 бензин цены">
+    <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34="/>
+    <title>АЗС Євронафта</title>
+    <meta name="robots" content="noindex,nofollow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>АЗС Євронафта</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
